@@ -20,6 +20,7 @@ system path):
 * Ciao (version 1.10):                   ciaolgt    (first run must use sudo)
 * CxProlog (version 0.97.1 or later):    cxlgt
 * ECLiPSe (version 6.0 or later):        eclipselgt
+* GNU Prolog (version 1.4.0 or later):   gplgt
 * Qu-Prolog (version 8.11 or later):     qplgt
 * SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt
 * SWI-Prolog (version 5.6.44 or later):  swilgt
